# template-rust-rocket

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
contrib/codegen/: Cargo.toml
contrib/codegen/src/: database.rs
contrib/lib/: Cargo.toml
core/codegen/: Cargo.toml  build.rs
core/codegen/src/: http_codegen.rs  lib.rs  proc_macro_ext.rs
core/codegen/src/attribute/: catch.rs  route.rs  segments.rs
core/codegen/src/bang/: mod.rs  uri.rs
core/codegen/src/derive/: from_form.rs  from_form_value.rs  responder.rs
core/codegen/tests/: expansion.rs  from_form_value.rs  responder.rs  route.rs  typed-uris.rs  uri_display.rs
core/codegen/tests/ui-fail/: catch.rs  catch_type_errors.stderr  catchers.stderr  from_form.rs  from_form.stderr  from_form_value.rs  from_form_value.stderr  responder-types.rs  responder-types.stderr  route-attribute-general-syntax.stderr  route-path-bad-syntax.rs  route-path-bad-syntax.stderr  route-warnings.rs  route-warnings.stderr  routes.stderr  typed-uri-bad-type.rs  typed-uri-bad-type.stderr  typed-uris-bad-params.stderr  typed-uris-invalid-syntax.stderr  uri_display.rs  uri_display.stderr
core/http/: Cargo.toml
core/lib/: Cargo.toml  build.rs
examples/managed_queue/: Cargo.toml
examples/todo/: Cargo.toml  bootstrap.sh
scripts/: bump_version.sh  config.sh  mk-docs.sh  publish.sh  test.sh
site/: index.toml
site/guide/: 1-quickstart.md  10-pastebin.md  11-conclusion.md  2-getting-started.md  3-overview.md  4-requests.md  5-responses.md  6-state.md  7-fairings.md  8-testing.md  9-configuration.md  index.md
(+77 files in other folders)
