[package]
name = "rocket_contrib_codegen"
version = "0.4.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Procedural macros for the Rocket contrib libraries."
documentation = "https://api.rocket.rs/v0.4/rocket_contrib/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket"
readme = "../../README.md"
keywords = ["rocket", "contrib", "code", "generation", "proc-macro"]
license = "MIT/Apache-2.0"
build = "build.rs"

[features]
database_attribute = []

[lib]
proc-macro = true

[dependencies]
devise = "0.2"
quote = "0.6"

[build-dependencies]
yansi = "0.5"
version_check = "0.1.3"
