[package]
name = "rocket_codegen"
version = "0.4.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Procedural macros for the Rocket web framework."
documentation = "https://api.rocket.rs/v0.4/rocket_codegen/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket"
readme = "../../README.md"
keywords = ["rocket", "web", "framework", "code", "generation"]
license = "MIT/Apache-2.0"
build = "build.rs"

[lib]
proc-macro = true

[dependencies]
indexmap = "1.0"
quote = "0.6.1"
rocket_http = { version = "0.4.0", path = "../http/" }
devise = "0.2"

[build-dependencies]
yansi = "0.5"
version_check = "0.1.3"

[dev-dependencies]
rocket = { version = "0.4.0", path = "../lib" }
compiletest_rs = { version = "0.3", features = ["stable"] }
